--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -4,7 +4,7 @@
 @tailwind utilities;
 
 :root {
-  --vt-c-white: #ffffff;
+  --vt-c-white: rgba(245, 151, 148, 0.3);
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
 
@@ -71,20 +71,13 @@ body {
     background-color 0.5s;
   line-height: 1.6;
   font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
+    Ryman Eco,
+    DM Sans,
     sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
