--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -3,12 +3,17 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: "Ryman Eco, Poppins, Roboto" ;
+  src: url('../assets/fonts/RymanEco-Regular.otf') format('opentype');
+}
+
 :root {
   --vt-c-white: rgb(255, 255, 255);
   --vt-c-white-soft: #f8f8f8;
   --vt-c-white-mute: #f2f2f2;
 
-  --vt-c-black: #ffffff;
+  --vt-c-black: #222222;
   --vt-c-black-soft: #222222;
   --vt-c-black-mute: #282828;
 
@@ -52,6 +57,18 @@
     --color-heading: var(--vt-c-text-dark-1);
     --color-text: var(--vt-c-text-dark-2);
   }
+}
+
+.dark-theme {
+  --color-background: var(--vt-c-black);
+  --color-background-soft: var(--vt-c-black-soft);
+  --color-background-mute: var(--vt-c-black-mute);
+
+  --color-border: var(--vt-c-divider-dark-2);
+  --color-border-hover: var(--vt-c-divider-dark-1);
+
+  --color-heading: var(--vt-c-text-dark-1);
+  --color-text: var(--vt-c-text-dark-2);
 }
 
 *,
